--- a/Project3_version_a.ipynb
+++ b/Project3_version_a.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# IS620 Group Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b>Group project: Using any of the three classifiers described in chapter 6 of Natural Language Processing with Python, and any features you can think of, build the best name gender classifier you can. Begin by splitting the Names Corpus into three subsets: 500 words for the test set, 500 words for the dev- test set, and the remaining 6900 words for the training set. Then, starting with the example name gender classifier, make incremental improvements. Use the dev-test set to check your progress. Once you are satisfied with your classifier, check its final performance on the test set. How does the performance on the test set compare to the performance on the dev-test set? Is this what you'd expect?</b>"
    ]
   },
@@ -11,17 +18,179 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color= blue> <b>Group Members:- Aaron Palumbo, Brian Chu,  avid.stern; partha banerjee;  Rohan Rray;Tulasi Ramarao;</b></font>"
+    "<font color= blue> <b>Group Members:- Aaron Palumbo, Brian Chu,  David Stern, Partha Banerjee;  Rohan Fray, Tulasi Ramarao;</b></font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Dependencies"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import nltk\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "names = nltk.corpus.names\n",
+    "maleNames = names.words('male.txt')\n",
+    "femaleNames = names.words('female.txt')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Training Data\n",
+    "\n",
+    "    * Train Set: Used to train the model\n",
+    "\n",
+    "    * Validation Set: Model Selection\n",
+    "\n",
+    "* Test Set: Measure Final Model performance (Only use this once at the end)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are different numbers of male and female names:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of male names: 2943\n",
+      "Number of female names: 5001\n"
+     ]
+    }
+   ],
+   "source": [
+    "print \"Number of male names: {}\".format(len(maleNames))\n",
+    "print \"Number of female names: {}\".format(len(femaleNames))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will have to do our splits separately. We will split the data with the goal of maintaining the same ratio of male to female in our train, validation, and test sets."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "perMale = 1.0 * len(maleNames) / (len(maleNames) + len(femaleNames))\n",
+    "perMale\n",
+    "\n",
+    "# total names\n",
+    "numNames = len(names.words())\n",
+    "# number used for testing\n",
+    "numTesting = 1000\n",
+    "# slit between final test and validation\n",
+    "perTest = 0.5\n",
+    "\n",
+    "# numbers for data splitting\n",
+    "numTestingMale = int(perMale * numTesting)\n",
+    "numTestingFemale = numTesting - numTestingMale\n",
+    "\n",
+    "numTestMale = int(numTesting * perTest * perMale)\n",
+    "numTestFemale = int(numTesting *  perTest - numValMale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Val Set   = 500 (Should be 500)\n",
+      "Test Set  = 500 (Should be 500)\n",
+      "Train Set = 6944 (Should be >6900)\n"
+     ]
+    }
+   ],
+   "source": [
+    "maleTrain, maleTesting = train_test_split(\n",
+    "    maleNames, test_size=numTestingMale, random_state=5)\n",
+    "maleVal, maleTest = train_test_split(\n",
+    "    maleTesting, test_size=numTestMale, random_state=6)\n",
+    "\n",
+    "femaleTrain, femaleTesting = train_test_split(\n",
+    "    femaleNames, test_size=numTestingFemale, random_state=7)\n",
+    "femaleVal, femaleTest = train_test_split(\n",
+    "    femaleTesting, test_size=numTestFemale, random_state=8)\n",
+    "\n",
+    "# Check numbers\n",
+    "print \"Val Set   = {} (Should be 500)\".format(len(maleVal) + len(femaleVal))\n",
+    "print \"Test Set  = {} (Should be 500)\".format(len(maleTest) + len(femaleTest))\n",
+    "print \"Train Set = {} (Should be >6900)\".format(len(maleTrain) + len(femaleTrain))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "train = pd.DataFrame({'name': maleTrain + femaleTrain,\n",
+    "                      'sex': (['male'] * len(maleTrain) + \n",
+    "                              ['female'] * len(femaleTrain))})\n",
+    "validation = pd.DataFrame({'name': maleVal + femaleVal,\n",
+    "                           'sex': (['male'] * len(maleVal) +\n",
+    "                                   ['female'] * len(femaleVal))})\n",
+    "test = pd.DataFrame({'name': maleTest + femaleTest,\n",
+    "                     'sex': (['male'] * len(maleTest) +\n",
+    "                             ['female'] * len(femaleTest))})"
+   ]
   }
  ],
  "metadata": {
@@ -40,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
