Fixed variable name

--- a/Project3_version_a.ipynb
+++ b/Project3_version_a.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -136,12 +136,12 @@
     "numTestingFemale = numTesting - numTestingMale\n",
     "\n",
     "numTestMale = int(numTesting * perTest * perMale)\n",
-    "numTestFemale = int(numTesting *  perTest - numValMale)"
+    "numTestFemale = int(numTesting *  perTest - numTestMale)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -190,6 +190,61 @@
     "test = pd.DataFrame({'name': maleTest + femaleTest,\n",
     "                     'sex': (['male'] * len(maleTest) +\n",
     "                             ['female'] * len(femaleTest))})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name    Kristos\n",
+      "sex        male\n",
+      "Name: 56, dtype: object\n",
+      "\n",
+      "name    Orton\n",
+      "sex      male\n",
+      "Name: 38, dtype: object\n",
+      "\n",
+      "name      Shea\n",
+      "sex     female\n",
+      "Name: 486, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Just to make sure we all see the same thing\n",
+    "print train.loc[56, :]\n",
+    "print\n",
+    "print validation.loc[38, :]\n",
+    "print\n",
+    "print test.loc[486, :]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Names should be Kristos, Orton, and Shea"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the above code to start another notebook to explore an algorithm. Make sure to use the splits as defined above and to not use the final test set to tune your model. =-)"
    ]
   }
  ],
