runninng prototype, but terrible results. Either there's a bug, or I need some new features.

--- a/naive_bayes_ap.ipynb
+++ b/naive_bayes_ap.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -58,10 +58,10 @@
     {
      "data": {
       "text/plain": [
-       "7332"
+       "3640"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -325,48 +325,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def addEdge(source, target):\n",
+    "def addEdge(G, source, target):\n",
     "    G.add_edge(source, target)\n",
-    "    try:       G.edge[source][target]['weight'] += 1\n",
+    "    try:\n",
+    "        # this will fail if the edge is just created\n",
+    "        G.edge[source][target]['weight'] += 1\n",
     "    except KeyError:\n",
     "        G.edge[source][target]['weight'] = 1\n",
     "\n",
-    "def addFeature(rowNum, description, feature):\n",
+    "def addFeature(G, rowNum, description, feature, trainingMode=True):\n",
+    "    # create unique feature identifier\n",
     "    ftext = description + \" \" + feature\n",
-    "    G.add_node(ftext)\n",
-    "    G.node[ftext]['label'] = 'feature'\n",
-    "    addEdge(rowNum, ftext)\n",
+    "    # if we're in training mode add the feature\n",
+    "    # if we're not in training mode we only want link name\n",
+    "    # to features that already exist\n",
+    "    # note that the second part is not run unless trainingMode == False\n",
+    "    if trainingMode or ftext in [f for f in returngen(G, 'feature')]:\n",
+    "        G.add_node(ftext, label='feature')\n",
+    "        addEdge(G, rowNum, ftext)\n",
     "\n",
-    "def featuresFromName(rowNum, name, sex):\n",
+    "def featuresFromName(G, rowNum, name, sex, trainingMode=True):\n",
     "    # We're going to use a bernoullli classifier, so all our features\n",
     "    # will be binary\n",
-    "    G.add_node(rowNum)\n",
-    "    G.node[rowNum]['label'] = 'name'\n",
-    "    G.node[rowNum]['name'] = name\n",
-    "    G.node[rowNum]['sex'] = sex\n",
-    "    n = len(name)\n",
     "    \n",
+    "    # add the name node\n",
+    "    G.add_node(rowNum, # using rowNum because name is not unique\n",
+    "               label = 'name',\n",
+    "               name = name,\n",
+    "               sex = sex) \n",
+    "    n = len(name)\n",
+    "        \n",
     "    # first letter\n",
-    "    addFeature(rowNum, \"1st letter\", name[0])\n",
+    "    addFeature(G, rowNum, \"1st letter\", name[0], trainingMode)\n",
     "    \n",
     "    # last letter\n",
-    "    ll = \"last letter \" + name[-1]\n",
-    "    addFeature(rowNum, \"last letter\", name[-1])\n",
+    "    addFeature(G, rowNum, \"last letter\", name[-1], trainingMode)\n",
     "    \n",
     "    # n-grams\n",
     "    for n_gram in [name[i:i+2] for i in range(n - 1)]:\n",
-    "        addFeature(rowNum, \"containts\", n_gram)\n",
+    "        addFeature(G, rowNum, \"contains\", n_gram, trainingMode)\n",
     "    \n",
     "    # length of names\n",
-    "    addFeature(rowNum, \"length is\", str(n))\n",
+    "    addFeature(G, rowNum, \"length is\", str(n), trainingMode)\n",
     "    \n",
-    "def returngen(nodeType):\n",
+    "def returngen(G, nodeType):\n",
     "    # generator for nodes of type nodeType\n",
     "    return (n for n in G.nodes() if G.node[n]['label'] == nodeType)"
    ]
@@ -380,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
@@ -390,142 +398,142 @@
      "output_type": "stream",
      "text": [
       "<type 'numpy.ndarray'>\n",
-      "[[0 0 0 1 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 1 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      " [0 1 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0]\n",
-      " [0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 1 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 1 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 1 0 1 1 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0\n",
-      "  0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 1 0 0 1 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0 0 0 0]\n",
-      " [1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
-      " [0 0 0 0 0 0 0 1 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      " [0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0\n",
-      "  0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1\n",
-      "  0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0]\n",
-      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
-      "  0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 1 0 1 0 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
-      " [0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0\n",
-      "  1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0]]\n",
+      "[[1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0\n",
+      "  0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0 1 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0]\n",
+      " [0 1 0 0 0 0 0 0 0 0 0 1 0 0 1 0 1 0 0 0 0 0 1 0 1 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0\n",
+      "  0 1 0 0 0 1 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 1 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 1 1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 0 0 0 0 1 1 0 0 0 0 0 0 1 0 0 0 0 0 0 1 1 0 0 1 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 1 1 1 0 0 0\n",
+      "  0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0\n",
+      "  0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 1 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1 1\n",
+      "  1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 1]\n",
+      " [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0\n",
+      "  0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 1 0 0 0 0 0 0 1 0 0 0 0 0 0]\n",
+      " [0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 1 0]\n",
+      " [0 0 0 1 0 0 0 0 1 0 0 0 0 1 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "  0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 0 0 0 0 0 0 0 1 0 0 0 1]]\n",
       "rows:\n",
       "barthel\n",
-      "claudius\n",
       "aharon\n",
       "staffard\n",
       "jessey\n",
       "david\n",
-      "selig\n",
+      "claudius\n",
       "hersh\n",
       "pietro\n",
       "adolf\n",
       "chet\n",
+      "selig\n",
       "rollin\n",
       "columns:\n",
+      "contains ba\n",
       "last letter d\n",
+      "contains da\n",
+      "contains ll\n",
       "last letter s\n",
-      "1st letter p\n",
+      "contains la\n",
       "last letter l\n",
-      "containts ba\n",
+      "last letter o\n",
       "last letter n\n",
-      "containts da\n",
       "last letter h\n",
+      "contains se\n",
       "length is 8\n",
       "length is 7\n",
       "length is 6\n",
-      "length is 5\n",
-      "last letter f\n",
-      "containts di\n",
+      "contains ff\n",
+      "contains sh\n",
+      "contains fa\n",
+      "contains di\n",
       "last letter g\n",
-      "containts fa\n",
-      "containts pi\n",
-      "containts iu\n",
-      "containts ta\n",
-      "containts ah\n",
-      "containts rd\n",
-      "containts af\n",
-      "1st letter d\n",
-      "containts on\n",
-      "containts ro\n",
-      "containts th\n",
-      "last letter y\n",
-      "containts rs\n",
-      "containts ig\n",
-      "containts id\n",
-      "containts ie\n",
-      "containts rt\n",
-      "containts in\n",
-      "containts st\n",
-      "containts au\n",
-      "containts ar\n",
-      "containts do\n",
-      "containts ll\n",
-      "containts ff\n",
-      "containts ey\n",
+      "contains pi\n",
       "last letter t\n",
-      "containts er\n",
-      "containts es\n",
+      "contains vi\n",
+      "contains ta\n",
+      "contains li\n",
+      "contains st\n",
+      "contains th\n",
+      "last letter y\n",
+      "1st letter p\n",
+      "length is 5\n",
+      "contains ha\n",
+      "contains tr\n",
+      "contains rs\n",
+      "contains he\n",
+      "contains er\n",
+      "contains je\n",
+      "contains do\n",
+      "last letter f\n",
+      "contains ad\n",
+      "contains es\n",
+      "contains af\n",
+      "contains rt\n",
+      "contains et\n",
+      "contains ss\n",
+      "contains ey\n",
       "1st letter r\n",
       "1st letter s\n",
-      "containts ad\n",
-      "containts et\n",
-      "1st letter h\n",
-      "containts av\n",
+      "contains ah\n",
+      "contains cl\n",
+      "contains au\n",
       "1st letter j\n",
-      "containts el\n",
-      "containts tr\n",
-      "containts ch\n",
+      "contains av\n",
+      "contains rd\n",
+      "contains ar\n",
       "1st letter a\n",
       "1st letter b\n",
       "1st letter c\n",
-      "containts cl\n",
+      "1st letter d\n",
+      "contains el\n",
       "length is 4\n",
-      "containts se\n",
-      "containts sh\n",
-      "last letter o\n",
-      "containts ud\n",
-      "containts ha\n",
-      "containts ol\n",
-      "containts ss\n",
-      "containts he\n",
-      "containts je\n",
-      "containts us\n",
-      "containts lf\n",
-      "containts la\n",
-      "containts li\n",
-      "containts vi\n"
+      "contains ro\n",
+      "1st letter h\n",
+      "contains id\n",
+      "contains ud\n",
+      "contains iu\n",
+      "contains lf\n",
+      "contains ch\n",
+      "contains us\n",
+      "contains in\n",
+      "contains ie\n",
+      "contains on\n",
+      "contains ig\n",
+      "contains ol\n"
      ]
     }
    ],
    "source": [
-    "G = nx.Graph()\n",
+    "tg = nx.Graph()\n",
     "\n",
     "for (i, nm, sx) in train.itertuples():\n",
-    "    featuresFromName(i, nm.lower(), sx)\n",
+    "    featuresFromName(tg, i, nm.lower(), sx)\n",
     "    if i > 10:\n",
     "        break\n",
     "\n",
     "m = nx.bipartite.biadjacency_matrix(\n",
-    "    G,\n",
-    "    [n for n in G.nodes() if G.node[n]['label'] == 'name'],\n",
-    "    [n for n in G.nodes() if G.node[n]['label'] == 'feature']\n",
+    "    tg,\n",
+    "    [n for n in tg.nodes() if tg.node[n]['label'] == 'name'],\n",
+    "    [n for n in tg.nodes() if tg.node[n]['label'] == 'feature']\n",
     ").toarray()\n",
     "\n",
     "print type(m)\n",
     "print m\n",
     "\n",
     "print \"rows:\"\n",
-    "for x in returngen('name'):\n",
-    "    print G.node[x]['name']\n",
+    "for x in returngen(tg, 'name'):\n",
+    "    print tg.node[x]['name']\n",
     "\n",
     "print \"columns:\"\n",
-    "for x in returngen('feature'):\n",
+    "for x in returngen(tg, 'feature'):\n",
     "    print x"
    ]
   },
@@ -545,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -553,35 +561,39 @@
     {
      "data": {
       "text/plain": [
-       "BernoulliNB(alpha=1.0, binarize=0.0, class_prior=None, fit_prior=True)"
+       "0.8207085253456221"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "G = nx.Graph()\n",
+    "tg = nx.Graph()\n",
     "\n",
     "for (i, nm, sx) in train.itertuples():\n",
-    "    featuresFromName(i, nm.lower(), sx)\n",
+    "    featuresFromName(tg, i, nm.lower(), sx)\n",
     "\n",
     "X = nx.bipartite.biadjacency_matrix(\n",
-    "    G,\n",
-    "    [n for n in G.nodes() if G.node[n]['label'] == 'name'],\n",
-    "    [n for n in G.nodes() if G.node[n]['label'] == 'feature']\n",
+    "    tg,\n",
+    "    [n for n in tg.nodes() if tg.node[n]['label'] == 'name'],\n",
+    "    [n for n in tg.nodes() if tg.node[n]['label'] == 'feature']\n",
     ").toarray()\n",
     "\n",
     "# Now we need Y, the results column\n",
     "Y = []\n",
-    "for x in returngen('name'):\n",
-    "    Y.append(G.node[x]['sex'])\n",
+    "for x in returngen(tg, 'name'):\n",
+    "    Y.append(tg.node[x]['sex'])\n",
     "Y = np.array(Y)\n",
     "\n",
     "# Time to train our model\n",
     "bnb = BernoulliNB()\n",
-    "bnb.fit(X, Y)"
+    "bnb.fit(X, Y)\n",
+    "\n",
+    "Ytrain = bnb.predict(X)\n",
+    "\n",
+    "1.0 * sum(Y == Ytrain) / len(Y)"
    ]
   },
   {
@@ -600,7 +612,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Extract our feature set\n",
+    "vg = nx.Graph()\n",
+    "for x in returngen(tg, 'feature'):\n",
+    "    vg.add_node(x, label='feature')\n",
+    "\n",
+    "# Connect validation names to existing features\n",
+    "for (i, nm, sx) in validation.itertuples():\n",
+    "    featuresFromName(vg, i, nm.lower(), sx, trainingMode=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -608,31 +638,36 @@
     {
      "data": {
       "text/plain": [
-       "[u'containts vo',\n",
-       " u'containts vi',\n",
-       " u'containts ve',\n",
-       " u'containts iv',\n",
-       " u'containts iw',\n",
-       " u'containts it',\n",
-       " u'containts iu',\n",
-       " u'containts ir',\n",
-       " u'containts is',\n",
-       " u'containts ip']"
+       "0.386"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Extract our feature set\n",
-    "featureSet = []\n",
-    "for x in returngen('feature'):\n",
-    "    featureSet.append(x)\n",
+    "Xval = nx.bipartite.biadjacency_matrix(\n",
+    "    vg,\n",
+    "    [n for n in returngen(vg, 'name')],\n",
+    "    [n for n in returngen(vg, 'feature')]\n",
+    ")\n",
     "\n",
+    "Yval = []\n",
+    "for x in returngen(vg, 'name'):\n",
+    "    Yval.append(vg.node[x]['sex'])\n",
+    "Yval = np.array(Yval)\n",
     "\n",
-    "featureSet[:10]"
+    "Ypredicted =  bnb.predict(Xval)\n",
+    "\n",
+    "1.0 * sum(Yval == Ypredicted) / len(Yval)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ouch, that's really bad. Time to debug and think about appropriate features."
    ]
   }
  ],
