--- a/naive_bayes2.ipynb
+++ b/naive_bayes2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 298,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 299,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 300,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 301,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
        "0.3704682779456193"
       ]
      },
-     "execution_count": 257,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 302,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
        "185.20000000000002"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 302,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 303,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
        "2572.0576"
       ]
      },
-     "execution_count": 259,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 304,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
        "0.6295317220543807"
       ]
      },
-     "execution_count": 260,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 305,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +151,7 @@
        "314.75"
       ]
      },
-     "execution_count": 261,
+     "execution_count": 305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 306,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
        "4371.248"
       ]
      },
-     "execution_count": 262,
+     "execution_count": 306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 307,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 308,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.78\n"
+      "0.752\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 309,
    "metadata": {
     "collapsed": false
    },
@@ -230,16 +230,16 @@
      "output_type": "stream",
      "text": [
       "Most Informative Features\n",
-      "             last_letter = u'a'           female : male   =     39.2 : 1.0\n",
-      "             last_letter = u'k'             male : female =     28.3 : 1.0\n",
-      "             last_letter = u'f'             male : female =     17.3 : 1.0\n",
-      "             last_letter = u'p'             male : female =      9.8 : 1.0\n",
-      "             last_letter = u'o'             male : female =      8.7 : 1.0\n",
-      "             last_letter = u'm'             male : female =      8.6 : 1.0\n",
-      "             last_letter = u'd'             male : female =      8.5 : 1.0\n",
-      "             last_letter = u'r'             male : female =      6.8 : 1.0\n",
-      "             last_letter = u'z'             male : female =      5.1 : 1.0\n",
-      "             last_letter = u'w'             male : female =      4.8 : 1.0\n"
+      "             last_letter = u'a'           female : male   =     38.1 : 1.0\n",
+      "             last_letter = u'k'             male : female =     33.2 : 1.0\n",
+      "             last_letter = u'v'             male : female =     18.9 : 1.0\n",
+      "             last_letter = u'f'             male : female =     15.5 : 1.0\n",
+      "             last_letter = u'p'             male : female =     12.7 : 1.0\n",
+      "             last_letter = u'd'             male : female =      9.8 : 1.0\n",
+      "             last_letter = u'm'             male : female =      9.1 : 1.0\n",
+      "             last_letter = u'o'             male : female =      7.9 : 1.0\n",
+      "             last_letter = u'r'             male : female =      7.5 : 1.0\n",
+      "             last_letter = u'g'             male : female =      5.7 : 1.0\n"
      ]
     }
    ],
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 310,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 311,
    "metadata": {
     "collapsed": false
    },
@@ -280,20 +280,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.76\n"
+      "0.79\n"
      ]
     }
    ],
    "source": [
     "training2 = [(gender_features2(n), gender) for (n, gender) in training]\n",
     "test2 = [(gender_features2(n), gender) for (n, gender) in test]\n",
+    "validation2 = [(gender_features2(n), gender) for (n, gender) in validation]\n",
     "classifier2 = nltk.NaiveBayesClassifier.train(training2)\n",
     "print(nltk.classify.accuracy(classifier2, test2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 317,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def gender_features3(name):\n",
+    "    features = {}\n",
+    "    features[\"first_letter\"] = name[0].lower()\n",
+    "    features[\"last_letter\"] = name[-1].lower()\n",
+    "    features[\"3-gram\"] = name[0:3]\n",
+    "    return features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 320,
    "metadata": {
     "collapsed": false
    },
@@ -302,8 +319,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.76\n"
+      "0.818\n"
      ]
+    }
+   ],
+   "source": [
+    "training3 = [(gender_features3(n), gender) for (n, gender) in training]\n",
+    "test3 = [(gender_features3(n), gender) for (n, gender) in test]\n",
+    "validation3 = [(gender_features3(n), gender) for (n, gender) in validation]\n",
+    "classifier3 = nltk.NaiveBayesClassifier.train(training3)\n",
+    "print(nltk.classify.accuracy(classifier3, training3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 319,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Joadasdajdhaksd'"
+      ]
+     },
+     "execution_count": 319,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": []
