--- a/naive_bayes2.ipynb
+++ b/naive_bayes2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 337,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 338,
    "metadata": {
     "collapsed": false
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 339,
    "metadata": {
     "collapsed": false
    },
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 340,
    "metadata": {
     "collapsed": false
    },
@@ -63,7 +63,7 @@
        "0.3704682779456193"
       ]
      },
-     "execution_count": 301,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 341,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
        "185.20000000000002"
       ]
      },
-     "execution_count": 302,
+     "execution_count": 341,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 342,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
        "2572.0576"
       ]
      },
-     "execution_count": 303,
+     "execution_count": 342,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 343,
    "metadata": {
     "collapsed": false
    },
@@ -129,7 +129,7 @@
        "0.6295317220543807"
       ]
      },
-     "execution_count": 304,
+     "execution_count": 343,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 305,
+   "execution_count": 344,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +151,7 @@
        "314.75"
       ]
      },
-     "execution_count": 305,
+     "execution_count": 344,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 345,
    "metadata": {
     "collapsed": false
    },
@@ -173,7 +173,7 @@
        "4371.248"
       ]
      },
-     "execution_count": 306,
+     "execution_count": 345,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 346,
    "metadata": {
     "collapsed": false
    },
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 308,
+   "execution_count": 347,
    "metadata": {
     "collapsed": false
    },
@@ -206,7 +206,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.752\n"
+      "0.78\n"
      ]
     }
    ],
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 348,
    "metadata": {
     "collapsed": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 349,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 350,
    "metadata": {
     "collapsed": false
    },
@@ -280,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.79\n"
+      "0.808\n"
      ]
     }
    ],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 351,
    "metadata": {
     "collapsed": false
    },
@@ -304,13 +304,14 @@
     "    features = {}\n",
     "    features[\"first_letter\"] = name[0].lower()\n",
     "    features[\"last_letter\"] = name[-1].lower()\n",
-    "    features[\"3-gram\"] = name[0:3]\n",
+    "    features[\"first_4\"] = name[0:3]\n",
+    "    features[\"last_3\"] = name[-3:-1]\n",
     "    return features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 352,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.818\n"
+      "0.869634111207\n"
      ]
     }
    ],
@@ -333,22 +334,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Joadasdajdhaksd'"
-      ]
-     },
-     "execution_count": 319,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   }
  ],
